--- a/FundamentosNodejs/SECAO_7_ENGINE/3_dados_para_views/views/home.handlebars
+++ b/FundamentosNodejs/SECAO_7_ENGINE/3_dados_para_views/views/home.handlebars
@@ -1,5 +1,3 @@
 <h1>ola handlebars</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, ducimus
-  minus! Sunt rerum laborum deleniti, dolores beatae eos, exercitationem sit
-  fugit vero quae odit repellendus fuga! Illum omnis amet sunt.
-</p>
+<p>O nome do usuario é {{user.name}} {{user.sobrenome}}, e ele tem {{user.idade}}</p>
+<h2>{{palavra}}</h2>
