--- a/FundamentosNodejs/SECAO_11_PROJETO2_MVC/views/toughts/dashboard.handlebars
+++ b/FundamentosNodejs/SECAO_11_PROJETO2_MVC/views/toughts/dashboard.handlebars
@@ -4,4 +4,10 @@
     <a href="/toughts/add" class="btn">Criar Pensamento</a>
     <h3>Seus pensamentos</h3>
   </div>
+  <ul>
+    {{#each toughts}}
+      <li>{{this.title}}</li>
+
+    {{/each}}
+  </ul>
 </div>
