--- a/FundamentosNodejs/SECAO_11_PROJETO2_MVC/views/toughts/home.handlebars
+++ b/FundamentosNodejs/SECAO_11_PROJETO2_MVC/views/toughts/home.handlebars
@@ -1,24 +1,32 @@
 <div class="home-header">
-  <h1>Todos os pensamentos</h1>
-
-<form action="/" method="GET">
-  <input type="text" name="search" placeholder="Esta buscando por algo? " />
-  <input type="submit" class="btn" value="Buscar" />
-</form>
-<div class="order-container">
-  <span>Ordenar por:</span>
+  {{#if search}}
+    <h1>Voce esta buscando por: <span>{{search}}</span></h1>
+    {{#if toughtsQty}}
+  <p>Foram encontrados <span>{{toughtsQty}}</span> pensamentos</p>
+    {{else}}
+  <p>nenhum pensamento foi encontrado para o termo <span>{{search}}</span></p>
+    {{/if}}
+  {{else}}
+    <h1>Conheça alguns dos nossos <span>Pensamentos</span>:</h1>
+  {{/if}}
   <form action="/" method="GET">
-    <input type="hidden" name="search" value="{{this.search}}" />
-    <input type="hidden" name="order" value="new" />
-    <button type="submit"><i class="bi bi-arrow-up"></i></button>
+    <input type="text" name="search" placeholder="Esta buscando por algo? " />
+    <input type="submit" class="btn" value="Buscar" />
   </form>
+  <div class="order-container">
+    <span>Ordenar por:</span>
     <form action="/" method="GET">
-    <input type="hidden" name="search" value="{{this.search}}" />
-    <input type="hidden" name="order" value="old" />
-    <button type="submit"><i class="bi bi-arrow-down"></i></button>
-  </form>
-  <a href="/">Limpar</a>
-</div>
+      <input type="hidden" name="search" value="{{this.search}}" />
+      <input type="hidden" name="order" value="new" />
+      <button type="submit"><i class="bi bi-arrow-up"></i></button>
+    </form>
+    <form action="/" method="GET">
+      <input type="hidden" name="search" value="{{this.search}}" />
+      <input type="hidden" name="order" value="old" />
+      <button type="submit"><i class="bi bi-arrow-down"></i></button>
+    </form>
+    <a href="/">Limpar</a>
+  </div>
 </div>
 
 <div class="toughts-container">
